manifests/03-canary-reviews.yaml
# MANIFEST 3: CANARY RELEASE FOR THE 'REVIEWS' SERVICE
# This manifest implements the core hands-on objective: a canary deployment.
---
# -------------------------------------------------------------------------------------------------
# RESOURCE: VirtualService
# PURPOSE:  To split traffic for the 'reviews' service between two different versions.
# WHY:      This is the "Run" phase. Now that we have an entry point (Gateway) and defined
#           service versions (DestinationRules), we can create a sophisticated routing rule.
#           This rule intercepts calls to the 'reviews' service and distributes the traffic
#           according to weighted percentages.
# -------------------------------------------------------------------------------------------------
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  # The 'hosts' field specifies the destination service for this traffic rule.
  # This rule applies to internal, service-to-service traffic where the target is 'reviews.default.svc.cluster.local'.
  hosts:
  - reviews
  http:
  - route:
    # This is the key to a canary release. The route block now contains a list of two destinations,
    # each with a 'weight'. Istio will distribute traffic based on these weights.
    - destination:
        host: reviews
        # The 'subset' name must match one of the subsets defined in the 'reviews' DestinationRule.
        subset: v1
      # 'weight' specifies the percentage of traffic to send to this destination.
      weight: 90
    - destination:
        host: reviews
        subset: v2
      weight: 10
